// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute dominance api should return success 1`] = `
Object {
  "data": Object {
    "result": 18.021654499028646,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 18.021654499028646,
  "statusCode": 200,
}
`;

exports[`execute globalmarketcap api should return success 1`] = `
Object {
  "data": Object {
    "result": 1952035118620.9563,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1952035118620.9563,
  "statusCode": 200,
}
`;
